Update mapStructInUse.md